REFACTOR: Rebuild preject tree for deployment process

--- a/pages/about.html
+++ b/pages/about.html
@@ -388,7 +388,7 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
 </body>
 
 
