--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
     </div>
   </div>
 
-  <script src="./assets/js/main.js" defer></script>
+  <script src="/js/main.js" defer></script>
 </body>
 
 </html>
