--- a/pages/blog_detail.html
+++ b/pages/blog_detail.html
@@ -276,7 +276,7 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
 </body>
 
 
