--- a/pages/contact.html
+++ b/pages/contact.html
@@ -335,8 +335,8 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
-<script src="../assets/js/main.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
+<script src="/js/main.js" defer></script>
 </body>
 
 
