--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -300,10 +300,10 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
-<script src="../assets/js/career.js" defer></script>
-<script src="../assets/js/job_detail_render.js" defer></script>
-<script src="../assets/js/jpb_detail.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
+<script src="/js/career.js" defer></script>
+<script src="/js/job_detail_render.js" defer></script>
+<script src="/js/jpb_detail.js" defer></script>
 </body>
 
 
