--- a/pages/recruit.html
+++ b/pages/recruit.html
@@ -250,9 +250,9 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
-<script src="../assets/js/job_list.js" defer></script>
-<script src="../assets/js/main.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
+<script src="/js/job_list.js" defer></script>
+<script src="/js/main.js" defer></script>
 </body>
 
 
