--- a/pages/training.html
+++ b/pages/training.html
@@ -274,8 +274,8 @@
         </div>
     </div>
 
-<script src="../assets/js/contact_fab.js" defer></script>
-<script src="../assets/js/main.js" defer></script>
+<script src="/js/contact_fab.js" defer></script>
+<script src="/js/main.js" defer></script>
 </body>
 
 
