STYLE(css): Change slider layout in Index.html file and increase font-size for text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="hero-slide active">
             <div class="hero-slide-content">
               <h1>
-                Cơ hội làm việc - học tập tại Đức <br />
+                Cơ hội việc làm tại Đức <br />
                 đang chờ bạn
               </h1>
               <p>
