--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKAHR_resize_removebg.png">
+    <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKA.jpg">
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
@@ -26,7 +26,7 @@
             <header id="main-header">
                 <a href="../index.html" class="logo-link">
                     <div class="logo">
-                        <img src="../assets/img/Logo_SADAKAHR_resize.jpg" alt="SADAKA HR Logo" />
+                        <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                     </div>
                 </a>
 
@@ -216,7 +216,7 @@
                             <div class="footer-logo-icon">
                                 <a href="#" class="logo-link">
                                     <div class="logo">
-                                        <img src="../assets/img/SADAKAHR_Logo_removebg.png" alt="SADAKA HR Logo" />
+                                        <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
                                 </a>
                             </div>
