DOCs(js): Add 2 section in recruit page and modify infomation in career js

--- a/pages/recruit.html
+++ b/pages/recruit.html
@@ -120,6 +120,48 @@
                     </div>
                 </div>
             </section>
+            <!-- List 2 -->
+            <section class="job-list-section">
+                <!-- content 1 -->
+                <div class="job-content" data-id="edeka">
+                    <div class="title">
+                        <h2>Chương trình việc làm tại Đức - EDEKA GROUP</h2>
+                        <a href="./job_detail.html" class="btn-desc" aria-label="Xem chi tiết">
+                            <span class="material-icons">arrow_forward</span>
+                        </a>
+                    </div>
+
+                    <div class="short-desc">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur velit harum in quisquam
+                            fuga, tempora inventore reprehenderit! Cumque fugit nulla, nemo, a itaque ad doloremque
+                            fuga, tenetur libero labore inventore.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad inventore ut corrupti sit
+                            assumenda a laborum exercitationem reprehenderit, sint quaerat hic aperiam magnam voluptate
+                            neque omnis officia expedita natus.</p>
+                    </div>
+                    <div class="job-img">
+                        <img src="../assets/img/Edeka.jpg" alt="Hình ảnh mô tả tuyển dụng">
+                    </div>
+                </div>
+                <!-- content 2 -->
+                <div class="job-content" data-id="Nihongo">
+                    <div class="title">
+                        <h2>Chương trình việc làm tại Nhật - Nihongo .Co</h2>
+                        <a href="./job_detail.html" class="btn-desc" aria-label="Xem chi tiết">
+                            <span class="material-icons">arrow_forward</span>
+                        </a>
+                    </div>
+
+                    <div class="short-desc">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur velit harum in quisquam
+                            fuga, tempora inventore reprehenderit! Cumque fugit nulla, nemo, a itaque ad doloremque
+                            fuga, tenetur libero labore inventore.</p>
+                    </div>
+                    <div class="job-img">
+                        <img src="../assets/img/Slider_2.jpg" alt="Hình ảnh mô tả tuyển dụng">
+                    </div>
+                </div>
+            </section>
 
         </div>
         <!-- =========== FOOTER =========== -->
