REFACTOR(css): resize for logo and add new 2 content for the career ads.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="marquee">
         <span>
           Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-          Hotline: 090 990 8353
+          Hotline: 0931.495.639
         </span>
       </div>
     </div>
@@ -516,7 +516,7 @@
               </li>
               <li>
                 <span class="material-icons">call</span>
-                <a href="tel:090 990 8353">090 990 8353</a>
+                <a href="tel:0931.495.639">0931.495.639</a>
               </li>
               <li>
                 <span class="material-icons">mail</span>
@@ -570,7 +570,7 @@
 
       <a class="panel-item" href="tel:+84901234567">
         <span class="item-icon phone">☎</span>
-        <span class="item-text">GỌI NGAY: 0901 234 567</span>
+        <span class="item-text">GỌI NGAY: 0931.495.639</span>
       </a>
     </div>
   </div>
