--- a/pages/recruit.html
+++ b/pages/recruit.html
@@ -102,9 +102,9 @@
                     </div>
                 </div>
                 <!-- content 2 -->
-                <div class="job-content" data-id="Nihongo">
+                <div class="job-content" data-id="Beauty-Care">
                     <div class="title">
-                        <h2>Chương trình việc làm tại Nhật - Nihongo .Co</h2>
+                        <h2 class="head-title">Tuyển dụng nhân viên Nail, Komestic làm việc tại Đức.</h2>
                         <a href="./job_detail.html" class="btn-desc" aria-label="Xem chi tiết">
                             <span class="material-icons">arrow_forward</span>
                         </a>
@@ -122,8 +122,8 @@
             </section>
             <!-- List 2 -->
             <section class="job-list-section">
-                <!-- content 1 -->
-                <div class="job-content" data-id="edeka">
+                <!-- content 3 -->
+                <div class="job-content" data-id="Supermarket-Sale">
                     <div class="title">
                         <h2>Chương trình việc làm tại Đức - EDEKA GROUP</h2>
                         <a href="./job_detail.html" class="btn-desc" aria-label="Xem chi tiết">
@@ -143,7 +143,7 @@
                         <img src="../assets/img/Edeka.jpg" alt="Hình ảnh mô tả tuyển dụng">
                     </div>
                 </div>
-                <!-- content 2 -->
+                <!-- content 4 -->
                 <div class="job-content" data-id="Nihongo">
                     <div class="title">
                         <h2>Chương trình việc làm tại Nhật - Nihongo .Co</h2>
