--- a/admin/index.html
+++ b/admin/index.html
@@ -7,11 +7,21 @@
 </head>
 
 <body>
-    <script src="https://unpkg.com/decap-cms@^2.0.0/dist/decap-cms.js"></script>
-
-    <!-- Optional: custom preview templates can be added here -->
-
-    <script></script>
+    <!-- Try load local decap first; fallback to jsdelivr -->
+    <script>
+        (function () {
+            var script = document.createElement('script');
+            script.src = '/admin/decap-cms.js';
+            script.onload = function () { console.log('Loaded local decap-cms.js'); };
+            script.onerror = function () {
+                console.warn('Local decap-cms.js not found, fallback to jsDelivr');
+                var s2 = document.createElement('script');
+                s2.src = 'https://cdn.jsdelivr.net/npm/decap-cms@2.0.0/dist/decap-cms.js';
+                document.head.appendChild(s2);
+            };
+            document.head.appendChild(script);
+        })();
+    </script>
 </body>
 
 </html>
