FEAT(render): build script to store blog data and render blog data

--- a/pages/blog_detail.html
+++ b/pages/blog_detail.html
@@ -277,6 +277,8 @@
     </div>
 
     <script src="/js/contact_fab.js" defer></script>
+    <script src="/js/blog_data.js"></script>
+    <script src="/js/blog_render.js"></script>
 </body>
 
 
