--- a/pages/blog.html
+++ b/pages/blog.html
@@ -291,6 +291,8 @@
 
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/main.js" defer></script>
+    <script src="/js/blog_data.js"></script>
+    <script src="/js/blog_render.js"></script>
 </body>
 
 
