REFACTOR: modify and Add OAuth auth listener

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,46 @@
 </head>
 
 <body>
-    <!-- Load local decap first; fallback to jsDelivr -->
+    <!-- Auth listener -->
+    <script>
+        console.log('Setting up auth listener...');
+
+        window.addEventListener('message', function (e) {
+            console.log('Message received:', e.data);
+
+            if (typeof e.data === 'string' && e.data.indexOf('authorization:github:success:') === 0) {
+                try {
+                    const dataStr = e.data.replace('authorization:github:success:', '');
+                    const authData = JSON.parse(dataStr);
+
+                    console.log('Parsed auth data:', authData);
+
+                    if (authData.token) {
+                        // Lưu theo format Decap CMS
+                        const user = {
+                            token: authData.token,
+                            backendName: 'github',
+                            login: 'authenticated-user'
+                        };
+
+                        localStorage.setItem('netlify-cms-user', JSON.stringify(user));
+                        console.log('Token saved successfully!');
+
+                        // Reload để CMS load với token mới
+                        setTimeout(function () {
+                            window.location.reload();
+                        }, 500);
+                    }
+                } catch (error) {
+                    console.error('Auth processing error:', error);
+                }
+            }
+        }, false);
+
+        console.log('Auth listener ready');
+    </script>
+
+    <!-- Load Decap CMS -->
     <script>
         (function () {
             var script = document.createElement('script');
