FEAT: Build precedure to get contact infomation

--- a/pages/about.html
+++ b/pages/about.html
@@ -188,37 +188,33 @@
                     <!-- core value 1 -->
                     <div class="core-value">
                         <div class="core-text">
-                            <p><strong>Uy tín & Minh bạch</strong></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem cupiditate
-                                maxime
-                                quis ea asperiores voluptates nisi odit magnam magni veniam, necessitatibus aperiam!
-                                Necessitatibus earum iusto totam assumenda fugit possimus?</p>
+                            <h3>Uy tín & Minh bạch</h3>
+                            <p>Chúng tôi khẳng định vị thế là đối tác tin cậy thông qua quy trình làm việc rõ ràng và
+                                cam kết minh bạch – hiệu quả trong mọi khâu xử lý hồ sơ. SADAKA HR luôn đảm bảo cung cấp
+                                thông tin trung thực, tuân thủ pháp luật để bảo vệ tối đa quyền lợi hợp pháp của người
+                                lao động trên thị trường quốc tế.</p>
                         </div>
                         <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 1">
                     </div>
                     <!-- core value 2 -->
                     <div class="core-value">
                         <div class="core-text">
-                            <p><strong>Chất lượng & Chuyên nghiệp</strong></p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut animi voluptatum nulla
-                                veniam,
-                                quae
-                                rerum omnis, modi sint nihil ratione aliquid! Voluptas debitis ipsum tempore,
-                                consectetur ut
-                                assumenda at perspiciatis.</p>
+                            <h3>Chất lượng & Chuyên nghiệp</h3>
+                            <p>Sở hữu đội ngũ chuyên gia tận tâm với nhiều năm kinh nghiệm, chúng tôi cung cấp giải pháp
+                                nhân sự toàn diện từ tuyển dụng đến đào tạo ngôn ngữ và kỹ năng. SADAKA HR cam kết nâng
+                                cao chất lượng nguồn nhân lực Việt, đáp ứng những tiêu chuẩn khắt khe nhất của các tập
+                                đoàn đa quốc gia tại Châu Âu.</p>
                         </div>
                         <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 2">
                     </div>
                     <!-- core value 3 -->
                     <div class="core-value">
                         <div class="core-text">
-                            <p><strong>Đồng hành & Trách nhiệm</strong></p>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi, rem earum
-                                eveniet
-                                repellendus est, dolores dolorem inventore praesentium, dicta recusandae numquam
-                                quisquam
-                                porro
-                                sequi sed aut unde. Sit, nobis.</p>
+                            <h3>Đồng hành & Trách nhiệm</h3>
+                            <p>Coi con người là tài sản quý giá nhất, chúng tôi cam kết đồng hành trọn vẹn cùng ứng viên
+                                từ lúc tư vấn, làm thủ tục đến khi hội nhập thành công nơi xứ người. SADAKA HR luôn đặt
+                                trách nhiệm và tương lai bền vững của người lao động làm trọng tâm, giúp bạn tự tin xây
+                                dựng sự nghiệp vững chắc.</p>
                         </div>
                         <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 3">
                     </div>
