--- a/pages/contact.html
+++ b/pages/contact.html
@@ -130,11 +130,17 @@
                                 <select id="service" name="service" required>
                                     <option value="">Chọn dịch vụ</option>
                                     <option value="Language Training">Đào tạo ngôn ngữ</option>
-                                    <option value="Overseas Recruitment">
-                                        Tuyển dụng lao động nước ngoài
+                                    <option value="Production Worker Recruitment">
+                                        Tuyển dụng công nhân sản xuất của tập đoàn Edeka
                                     </option>
-                                    <option value="Career Coaching">
-                                        Định hướng &amp; tư vấn nghề nghiệp
+                                    <option value="Nail Care Staff Recruitment">
+                                        Tuyển dụng nhân viên chăm sóc móng
+                                    </option>
+                                    <option value="Sales Staff Recruitment">
+                                        Tuyển dụng nhân viên bán hàng hệ thống siêu thị
+                                    </option>
+                                    <option value="Sales Staff Recruitment">
+                                        Tuyển dụng công nhân sản xuất của tập đoàn Weisenof
                                     </option>
                                     <option value="Other">Khác</option>
                                 </select>
@@ -335,8 +341,10 @@
         </div>
     </div>
 
+    <script src="/js/contact_form_gas.js" defer></script>
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/main.js" defer></script>
+    <!-- Google Apps Script Handler -->
 </body>
 
 
