--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -303,7 +303,7 @@
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/career.js" defer></script>
     <script src="/js/job_detail_render.js" defer></script>
-    <script src="/js/jpb_detail.js" defer></script>
+    <script src="/js/job_detail.js" defer></script>
 </body>
 
 
