FEAT: rebuild precedure to get contact infomation

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -129,20 +129,20 @@
                                 <label for="service">Dịch vụ bạn quan tâm *</label>
                                 <select id="service" name="service" required>
                                     <option value="">Chọn dịch vụ</option>
-                                    <option value="Language Training">Đào tạo ngôn ngữ</option>
-                                    <option value="Production Worker Recruitment">
+                                    <option value="Đào tạo ngôn ngữ">Đào tạo ngôn ngữ</option>
+                                    <option value="Tuyển dụng công nhân sản xuất của tập đoàn Edeka">
                                         Tuyển dụng công nhân sản xuất của tập đoàn Edeka
                                     </option>
-                                    <option value="Nail Care Staff Recruitment">
+                                    <option value="Tuyển dụng nhân viên chăm sóc móng">
                                         Tuyển dụng nhân viên chăm sóc móng
                                     </option>
-                                    <option value="Sales Staff Recruitment">
+                                    <option value="Tuyển dụng nhân viên bán hàng hệ thống siêu thị">
                                         Tuyển dụng nhân viên bán hàng hệ thống siêu thị
                                     </option>
-                                    <option value="Sales Staff Recruitment">
+                                    <option value="Tuyển dụng công nhân sản xuất của tập đoàn Weisenof">
                                         Tuyển dụng công nhân sản xuất của tập đoàn Weisenof
                                     </option>
-                                    <option value="Other">Khác</option>
+                                    <option value="Khác">Khác</option>
                                 </select>
                                 <span class="field-error"></span>
                             </div>
