--- a/pages/training.html
+++ b/pages/training.html
@@ -81,22 +81,20 @@
             <!-- Content 01 -->
             <section class="content">
                 <div class="about-sadaka">
-                    <h2 class="about-title">Phương châm</h2>
+                    <h2 class="about-title">Phương châm: "Kết nối tri thức - Chuẩn hóa tương lai"</h2>
 
                     <div class="about-text">
                         <p>
                             <strong>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum vero nulla
-                                explicabo. Possimus, laudantium tempore voluptatibus doloremque praesentium
-                                voluptatem
-                                quasi et omnis quos delectus sint maiores mollitia facilis totam.
+                                Tại SADAKA HR, chúng tôi không đơn thuần tìm kiếm một khóa học, chúng tôi tìm kiếm môi
+                                trường giáo dục tốt nhất cho bạn.
                             </strong>
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum vero nulla
-                            explicabo. Possimus, laudantium tempore voluptatibus doloremque praesentium voluptatem
-                            quasi
-                            et omnis quos delectus sint maiores mollitia facilis totam.
+                            Phương châm của chúng tôi là hợp tác với những đơn vị
+                            đào tạo hàng đầu, đảm bảo mỗi ứng viên không chỉ học để lấy chứng chỉ, mà còn học để
+                            sống và hòa nhập. Chúng tôi giám sát chặt chẽ chất lượng đầu ra, giúp bạn tiết kiệm thời
+                            gian, tối ưu chi phí và tự tin sử dụng tiếng Đức như ngôn ngữ thứ hai.
                         </p>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum vero nulla
