CHORE(content): Write content about training progress

--- a/pages/training.html
+++ b/pages/training.html
@@ -86,21 +86,21 @@
                     <div class="about-text">
                         <p>
                             <strong>
-                                Tại SADAKA HR, chúng tôi không đơn thuần tìm kiếm một khóa học, chúng tôi tìm kiếm môi
-                                trường giáo dục tốt nhất cho bạn.
+                                Tại SADAKA HR, dù không trực tiếp đứng lớp, chúng tôi cam kết chịu trách nhiệm tuyệt đối
+                                về chất lượng của môi trường giáo dục mà bạn sẽ tham gia.
                             </strong>
                         </p>
                         <p>
-                            Phương châm của chúng tôi là hợp tác với những đơn vị
-                            đào tạo hàng đầu, đảm bảo mỗi ứng viên không chỉ học để lấy chứng chỉ, mà còn học để
-                            sống và hòa nhập. Chúng tôi giám sát chặt chẽ chất lượng đầu ra, giúp bạn tiết kiệm thời
-                            gian, tối ưu chi phí và tự tin sử dụng tiếng Đức như ngôn ngữ thứ hai.
+                            Phương châm hoạt động của chúng tôi là "Chọn lọc tinh hoa". Chúng tôi chỉ liên kết với những
+                            trung tâm ngôn ngữ có giáo trình chuẩn Châu Âu và đội ngũ giảng viên giàu kinh nghiệm. Mọi
+                            đối tác đều phải trải qua quy trình thẩm định khắt khe về tỷ lệ đỗ chứng chỉ trước khi được
+                            chúng tôi giới thiệu.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum vero nulla
-                            explicabo. Possimus, laudantium tempore voluptatibus doloremque praesentium voluptatem
-                            quasi
-                            et omnis quos delectus sint maiores mollitia facilis totam.
+                            Hơn cả một người kết nối, SADAKA đóng vai trò là người giám sát độc lập. Chúng tôi theo dõi
+                            sát sao tiến độ học tập của từng ứng viên hàng tuần, đảm bảo rằng mỗi đồng học phí và thời
+                            gian bạn bỏ ra đều mang lại giá trị thực tế, giúp bạn không bị "hổng" kiến thức khi bước
+                            chân sang Đức.
                         </p>
                     </div>
 
@@ -121,23 +121,19 @@
                     <div class="about-text">
                         <p>
                             <strong>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorum vero fuga
-                                corrupti iste, laudantium ad cumque earum sequi numquam aperiam velit, ab incidunt
-                                sint
-                                sit aspernatur adipisci, qui autem!
+                                Mục tiêu tối thượng của chúng tôi là xóa bỏ rào cản ngôn ngữ, biến tiếng Đức từ một "nỗi
+                                sợ" thành công cụ sắc bén nhất giúp người lao động Việt tự tin hội nhập.
                             </strong>
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorum vero fuga
-                            corrupti
-                            iste, laudantium ad cumque earum sequi numquam aperiam velit, ab incidunt sint sit
-                            aspernatur adipisci, qui autem!
+                            Chúng tôi đặt mục tiêu 100% ứng viên thông qua hệ thống đối tác của SADAKA đều đạt trình độ
+                            A2/B1 đúng thời hạn cam kết. Việc rút ngắn thời gian đào tạo nhưng vẫn đảm bảo nền tảng vững
+                            chắc là ưu tiên hàng đầu để giúp người lao động sớm xuất cảnh và có thu nhập ổn định.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorum vero fuga
-                            corrupti
-                            iste, laudantium ad cumque earum sequi numquam aperiam velit, ab incidunt sint sit
-                            aspernatur adipisci, qui autem!
+                            Về dài hạn, chúng tôi xây dựng một lộ trình khép kín: Tư vấn - Đào tạo - Xuất cảnh. Từ lúc
+                            bạn chưa biết gì cho đến khi cầm tấm bằng trên tay, mọi bước đi đều có sự đồng hành và đôn
+                            đốc từ SADAKA, giúp con đường đến nước Đức của bạn trở nên bằng phẳng và an tâm nhất.
                         </p>
                     </div>
 
